name:                reflex-dom-plotly
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Maciej Kazulak
maintainer:          kazulakm@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  js-sources:          lib/plotly-latest.min.js
  exposed-modules:     Reflex.Dom.Plotly
                     , Reflex.Dom.Plotly.Internal.JavaScript
                     , Reflex.Dom.Plotly.Types
  build-depends:       base >=4.9 && <4.11
                     , aeson
                     , containers
                     , data-default
                     , ghcjs-dom
                     , lens
                     , reflex-dom
                     , text
  if impl(ghcjs)
    build-depends: ghcjs-base
  else
    build-depends: jsaddle
