name:                reflex-dom-plotly-examples
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Maciej Kazulak
maintainer:          kazulakm@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable reflex-dom-plotly-random
  main-is:             Random.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.10
                     , lens
                     , random
                     , reflex-dom
                     , reflex-dom-plotly
                     , text
